tests/wpt/tests/third_party/test262/test/language/statements/await-using/syntax/with-initializer-if-expression-statement-else-statement.js
// Copyright (C) 2023 Ron Buckton. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
esid: sec-if-statement
description: >
    await using declarations with initialisers in statement positions:
    if ( Expression ) Statement else Statement
negative:
  phase: parse
  type: SyntaxError
features: [explicit-resource-management]
---*/

$DONOTEVALUATE();
async function f() {
  if (true) {} else await using x = null;
}
